# event-schemas

./: .gitignore  .releaserc  README.md  asyncapi.yaml  consoledotevents.json  index.html  package-lock.json  package.json  pyproject.toml
.github/: dependabot.yml
.github/workflows/: docs.yaml  release.yaml  validate.yaml
docs/: index.html
examples/: advisor.json  error.json  export-service.json  policies.json  repositories.json  subscriptions-vdc-misconfiguration.json
libraries/golang/apps/advisor/v1/: advisor_recommendations.go
libraries/golang/core/v1/: empty.go  error.go  rhel_system.go
libraries/java/: pom.xml
libraries/js/src/apps/advisor/v1/: advisor_recommendations.js
libraries/js/src/core/v1/: empty.js  error.js  rhel_system.js
libraries/python/src/apps/advisor/v1/: advisor_recommendations.py
libraries/python/src/core/v1/: empty.py  error.py  rhel_system.py
libraries/ruby/src/core/v1/: empty.rb  error.rb  rhel_system.rb
schemas/: advisor-system.json  events.json  system.json
schemas/apps/advisor/v1/: advisor-recommendations.json
schemas/apps/export-service/: export-request.json
schemas/apps/export-service/v1/: export-request.json  resource-request.json
schemas/apps/policies/v1/: policy-triggered.json
schemas/apps/repositories/v1/: repository-events.json
schemas/core/v1/: common.json  empty.json  error.json  human_readable.json  notification.json  rhel_system.json  system.json
schemas/events/v1/: events.json
scripts/: generate.js  update-docs.sh  validate.js  validate.py
(+1 files in other folders)
