[tool.poetry]
name = "consoledot-event-schemas"
version = "0.1.0"
description = ""
authors = ["Kevin Howell <khowell@redhat.com>"]

[tool.poetry.dependencies]
python = "^3.10"
jsonschema = "^4.4.0"
click = "^8.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
